# ai_conversational_teacher

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  error_checker.py  example_config.py  example_error_checker.py  example_statistics.py  fly.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  statistics.py  voice_interface.py
.github/: copilot-instructions.md  gemini.md
.github/workflows/: ci.yml
aiteacher/audio/: audio_parser.py  input_stream.py
aiteacher/scenario/: find_errors.py
aiteacher/util/: _save_debug_wav.py  logs.py
conversa/: __init__.py
conversa/audio/: audio_io.py  audio_parser.py  input_stream.py
conversa/audio/input_stream/: __init__.py  base.py  buffer.py  file.py  microphone.py  virtual.py
conversa/features/: find_errors.py  llm_api.py
conversa/scenario/: find_errors.py
conversa/scenarios/: answer.py
conversa/util/: _save_debug_wav.py  io.py  logs.py
conversa/web/: gradio_demo.py  gradio_version.py  index.html  io.py  server.py  web.py
models/: models.md
src/ai_conversational_teacher/: __init__.py  __main__.py
tests/: __init__.py  read_wav.py  test_audio_parser.py  test_llm.py  test_main.py  test_speech.py  test_with_input_stream.py
tests/audio/: test_audio_io.py  test_base.py  test_buffer.py  test_file.py  test_input_stream_integration.py  test_microphone.py
tests/audio/input_stream/: test_virtual_microphone.py
tests/audio/output_stream/: __init__.py  test_base.py  test_file.py  test_integration.py  test_speaker.py  test_speaker_race_condition.py
tests/features/: test_llm_api.py
tests/other/: test_file_narrator_integration.py  test_resumable_playback.py  test_with_input_stream.py
tests/other/cases/: test_reproduce_hang_case.py
tests/scenarios/: test_answer.py  test_file_narrator.py
tests/util/: test_io.py  test_logs.py
tests/web/: test_web_output.py
